--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   font-size: 16px;
   color: black;
   margin: 0;
+  text-decoration: none;
 }
 * {
   box-sizing: border-box;
@@ -144,7 +145,7 @@ h3.filters {
   width: 100%;
 }
 
-#filtercategory {
+.filtercategory {
   justify-content: center;
   margin-right: 10px;
   padding: 5px;
@@ -201,10 +202,6 @@ section {
   margin: 10px;
   padding: 10px;
 }
-h2 {
-  /*propriètés de h2*/
-  margin: 20px 0 0 20px;
-}
 h3 {
   /*propriètés de h3*/
   font-size: 16px;
@@ -214,7 +211,6 @@ h3 {
 .hebergements {
   /*propriètés de la section hebergements*/
   background-color: #f2f2f2;
-  width: auto;
   height: 43em;
   border-radius: 2em 2em 2em 2em;
   object-fit: contain;
@@ -222,6 +218,7 @@ h3 {
 }
 .hebergements h2 {
   font-size: 20px;
+  padding-left: 30px;
 }
 img {
   /*propriètés images*/
@@ -266,13 +263,17 @@ article {
   margin: 20px;
 }
 /******************************* propriètés de la partie populaire *******************************/
+.container-2{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 10px;
+}
 .populaires {
   /*Propriètés populaires */
   background-color: #f2f2f2;
-  display: flex;
-  justify-content: space-between;
   border-radius: 2em 2em 2em 2em;
-  flex-direction: column;
   margin: 0 20px;
   padding: 0px 20px;
   width: 30%;
@@ -298,7 +299,7 @@ article {
   width: 100%;
   height: 15em;
   padding: 1px;
-  margin-bottom: 65px;
+  margin-bottom: 47px;
 }
 .img-pop {
   /*proprietes des images de la partie pop*/
@@ -332,32 +333,74 @@ article {
 }
 .annonces-activites {
   display: flex;
+  justify-content: space-between  ;
+
+}
+.annonces-activites img{
+  padding: 0px;
+}
+.container-activites{
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  width: 22%;
+  height: 70%;
 }
 
+.petitformat {
+  display: flex;
+  flex-direction: column;
+  border-radius: 2em;
+  font-weight: bold;
+  height: 45%;
+  padding-bottom: 7px;
+}
+.petitformat img {
+  height: 80%;
+  object-fit: cover;
 
-.petitformat{
-    display: flex;
-    flex-direction: column;
-    width: 22%;
-    margin: 20px;
-    border-radius: 2em;
-    font-weight: bold;
-    height: 70%;
 }
-.grandformat{
-    width: 22%;
-    margin: 20px;
-    border-radius: 2em;
-    height: 70%;
-    font-weight: bold;
+.grandformat {
+  width: 22%;
+  border-radius: 2em;
+  height: 70%;
+  font-weight: bold;
 }
-.grandformat img{
-   height: 90%;
-   object-fit: cover;
-   
+.grandformat img {
+  height: 90%;
+  object-fit: cover;
+ 
+}
+.titre-photo p{
+  justify-content: center;
+  position: absolute;
+  margin: 15px;
+}
+.grandformat,.petitformat, .location, .location-pop{
+  box-shadow: 0px 0px 10px #000;
 }
 
-.petitformat img{
-    
+/******************************* Footer *******************************/
+
+.footer{
+  display: flex;
+  background-color: #f2f2f2;
+ flex-direction: row;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.footer-gauche, .footer-centre, .footer-droite{
+  padding: 0 20px;
+}
+h4{
+  font-size: 14px;
+  font-weight: bold;
+}
+ul{
+  align-items: flex-start;
+  padding: 0;
+}
+li{
+  list-style-type: none;
+  font-size: 14px;
 }
