--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,5 +1,45 @@
-@media screen and (max-width: 1280px) {
-   
+/*** Résolition pour Iphone8 ***/
+@media screen and (max-width: 768px) {
+  .header{
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      margin: 0; 
     }
+    .navbar{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .logo .signin{
+        order: 1;
+      
+       
+    }
+    .signin {
+        order: 2;
+    }
+    .header-nav{
+   display: flex;
+    width: 100%;
+    order: 3;
+}
+ .header-nav a {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+.header-nav a:hover{
+    border-top: none;
+    border-bottom: 2px solid #0065FC;
+    padding-bottom: 10px;
+}
+.button{
+    display: none;
+}
+
+    
 
 
+
+}
