--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,28 +1,31 @@
 /*** Résolition pour Iphone8 ***/
 @media screen and (max-width: 768px) {
-  .header{
+  body main{
+    margin: 0;
+  }
+    .header{
       display: flex;
       flex-wrap: wrap;
       width: 100%;
-      margin: 0; 
+      margin: 15px; 
     }
     .navbar{
       display: flex;
       flex-direction: column;
       width: 100%;
     }
-    .logo .signin{
-        order: 1;
+    .logo{
+        order: -2;
       
        
     }
     .signin {
-        order: 2;
+        order: -1;
     }
     .header-nav{
    display: flex;
     width: 100%;
-    order: 3;
+    
 }
  .header-nav a {
     display: flex;
@@ -34,12 +37,94 @@
     border-bottom: 2px solid #0065FC;
     padding-bottom: 10px;
 }
+
+/*** mise en place icone rechercher ***/
 .button{
     display: none;
 }
+.button_icon{
+    border-radius: 1rem 1rem 1rem 1rem;
+    background-color: #0065FC;
+    color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: -10px;
+}
 
-    
+/*** filtres ***/
+.filtres{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.categories{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
+.name{
+    margin: 10px 0px;
+}
+ 
+/**** mise en place des plus populaires ***/
+section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+.hebergements{
+    order: -1;
+    width: 100%;
+    background-color: white;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+    height: auto;
+}
+.location{
+    width: 100%;
+}
+.populaires{
+    order: -2;
+   width: 100%;
+   background-color: #F2F2F2;
+   border-radius: 0;
+  margin: 0;
+  padding: 0;
+}
+/*** Activités à Marseille ***/
 
+.bloc-activites{
+ 
+    margin: 0;
+    display: flex;
+    width: 100%;
+}
+.annonces-activites{
+flex-direction: column;
+    width: 100%;
+}
+.grandformat{
+    width: 100%;
+   
+}
+.container-activites{
+    width: 100%;
+   
+}
+.footer{
+    order: -1;
+}
 
 
 }
