--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ main {
   height: 90px;
   object-fit: contain;
   margin-left: 0px;
+  order: 1;
  
 }
  .navbar {
@@ -52,6 +53,7 @@ main {
 .header-nav {
   /*marges menu*/
   margin: 40px 0;
+  order: 2;
  
 }
 .header-nav a {
@@ -73,6 +75,7 @@ a {
  color: #0065FC;
  display: flex;
  align-items: center;
+ order: 3;
  
 
 }
