--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -132,14 +132,18 @@ section{
     margin: 0px 5px;
 }
 /*** Activités à Marseille ***/
-
+.bloc-activites{
+    width: 100%;
+    align-items: center;
+}
 .container-activites{
- 
+    align-items: center;
     margin: 0;
     width: 100%;
+    height: 44em;
+    justify-content: space-evenly;
 }
 .annonces-activites{
-flex-wrap: wrap;
     width: 100%;
 }
 .titre-activites{
@@ -150,23 +154,17 @@ flex-wrap: wrap;
 }
 .grandformat{
     width: 100%;
-    margin: 30px;
-   height: 37%;
+   height: 16em;
 }
 .grandformat img{
    height: 80%;
 }
 .petitformat{
     width: 100%;
-    margin: 30px;
     height: 37%;
 }
 .petitformat img{
     height: 80%;
-}
-.container-activites{
-    width: 100%; 
-    margin: 30px; 
 }
 footer{
     
