--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,7 +1,8 @@
-/*** Résolition pour Iphone8 ***/
-@media only screen and (min-width: 320px)and (max-width:599px) {
+/*** Résolition pour mobile ***/
+@media only screen and (max-width: 599px) {
   body, main{
     margin: 0;
+   
   }
     .header{
       display: flex;
@@ -81,6 +82,7 @@ margin: 10px 20px;
     display: flex;
     flex-wrap: wrap;
     margin: 10px 20px;
+    
 }
 .categories{
 display: flex;
@@ -176,8 +178,11 @@ flex-direction: column;
 }
 /***Resolution Tablette***/
 
-@media only screen and (min-width:600px) and (max-width:1023px){
+@media only screen and (min-width: 600px) and (max-width: 1023px){
     /***mise en place des filtres ***/
+    .categories{
+        flex-wrap: wrap;
+    }
    .name{
        margin: 10px 0;
    }
@@ -197,16 +202,17 @@ flex-direction: column;
     flex-wrap: wrap;
     margin: 0px 10px;
     padding: 0px 10px;
-   
+   width: 100%;
 }
    .populaires{
        order: 1;
        width: 100%;
-       display: block;
+       display: flex;
        flex-direction: column;
    }
    .container-2{
        flex-direction: row;
+       width: 100%;
    }
    .location-pop{
        width: 28em;
