--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ a {
  display: flex;
  align-items: center;
  order: 3;
+ padding-left: 30px;
 }
 .disabled {
   /*propriètés de "s'incrire"-désactivation du lien*/
@@ -154,6 +155,7 @@ h3.filters {
   display: flex;
   align-items: center;
   width: 100%;
+  flex-wrap: wrap;
 }
 .name{
   margin: 20px;
@@ -270,7 +272,8 @@ article {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10px;
+  padding: 0 15px;
+  margin: 0;
 }
 /*proprietes afficher plus*/
 .plus {
@@ -314,7 +317,7 @@ article {
   justify-content: flex-start;
   width: 100%;
   height: 15em;
-  padding: 1px;
+  padding: 5px;
   margin-bottom: 47px;
 }
 .img-pop {
@@ -327,14 +330,15 @@ article {
 .text-pop {
   /*alignement de la legende pop*/
   margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 .text-pop h3 {
   /*proprietes de la legende pop*/
   font-size: 16px;
   font-weight: bold;
-}
-.notation-pop {
-  margin-top: 50px;
 }
 /******************************* Activités à Marseille *******************************/
 .bloc-activites{
