--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -209,6 +209,7 @@ flex-direction: column;
        width: 100%;
        display: flex;
        flex-direction: column;
+       overflow-x: hidden;
    }
    .container-2{
        flex-direction: row;
