--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -4,6 +4,9 @@
     margin: 0;
    
   }
+  main{
+      padding: 0;
+  }
     .header{
       display: flex;
       flex-wrap: wrap;
@@ -38,7 +41,7 @@
     justify-content: center;
     width: 50%;
     border-bottom: 2px solid #F2F2F2;
-    padding: 30px 0px;
+    padding: 58px 0px;
 }
 .header-nav a:hover{
     border-top: none;
@@ -167,6 +170,10 @@ section{
 .petitformat img{
     height: 80%;
 }
+.titre-photo p{
+    margin: 0;
+    padding: 10px;
+}
 .footer{
 display: flex;
 flex-direction: column;
@@ -203,6 +210,7 @@ flex-direction: column;
     margin: 0px 10px;
     padding: 0px 10px;
    width: 100%;
+   justify-content: space-between;
 }
    .populaires{
        order: 1;
@@ -216,8 +224,9 @@ flex-direction: column;
        width: 100%;
    }
    .location-pop{
-       width: 28em;
+       width: 25em;
        padding: 5px;
+       margin: 5px;
    }
    .img-pop{
        width: 50%;
@@ -253,4 +262,11 @@ flex-direction: column;
     width: 30%;
     margin-top: 10px;
    }
+   .titre-photo p{
+       margin: 0;
+       padding: 10px;
+   }
+   .text-pop{
+    justify-content: flex-start;
+}
 }
