--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -34,6 +34,7 @@
     width: 100%;
     margin: 0px;
     order: 3;
+    padding-top: 20px;
     
 }
  .header-nav a {
@@ -41,11 +42,12 @@
     justify-content: center;
     width: 50%;
     border-bottom: 2px solid #F2F2F2;
-    padding: 58px 0px;
+    padding-bottom: 30px;
 }
 .header-nav a:hover{
     border-top: none;
-    border-bottom: 2px solid #0065FC;   
+    border-bottom: 2px solid #0065FC;  
+    padding: 0 0 30px 0; 
 }
 .logo .signin{
     display: flex;
@@ -92,7 +94,7 @@ display: flex;
 flex-wrap: wrap;
 }
 .name{
-    margin: 10px 0px;
+    padding: 10px 4px;
 }
 .border-filter{
     margin-right: 0px;
@@ -187,11 +189,15 @@ flex-direction: column;
 
 @media only screen and (min-width: 600px) and (max-width: 1023px){
     /***mise en place des filtres ***/
+    h3.filters{
+        margin-right: 30px;
+    }
     .categories{
         flex-wrap: wrap;
     }
    .name{
        margin: 10px 0;
+       padding: 0;
    }
    .border-filter{
        margin: 10px;
@@ -218,24 +224,34 @@ flex-direction: column;
        display: flex;
        flex-direction: column;
        overflow-x: hidden;
+       padding: 0;
    }
    .container-2{
        flex-direction: row;
        width: 100%;
+       padding: 10px 10px 20px 10px;
+       margin: 0;
    }
    .location-pop{
-       width: 25em;
+       width: 22em;
        padding: 5px;
        margin: 5px;
    }
    .img-pop{
-       width: 50%;
+       width: 7em;
 
+   }
+   .text-pop{
+       justify-content: space-between;
+       margin-left: 10px;
    }
    .hebergements{
        order: 2;
        width: 100%;
        margin: 20px 0;   
+   }
+   .hebergements h2{
+       padding-left: 20px;
    }
    .location{
        width: 45%;
@@ -266,7 +282,5 @@ flex-direction: column;
        margin: 0;
        padding: 10px;
    }
-   .text-pop{
-    justify-content: flex-start;
-}
+   
 }
