--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -30,7 +30,7 @@
         margin-right: 20px;
     }
     .header-nav{
-   display: flex;
+    display: flex;
     width: 100%;
     margin: 0px;
     order: 3;
@@ -102,7 +102,7 @@ flex-wrap: wrap;
  .info{
      margin: 0px 20px;
  }
-/**** mise en place des plus populaires ***/
+/**** mise en place des plus populaires et hebergements***/
 section{
     display: flex;
     flex-direction: column;
